org.springframework.expression/src/main/java/org/springframework/expression/spel/generated/SpringExpressionsParser.java
// $ANTLR 3.0.1 /Users/aclement/el2/spring-framework/trunk/org.springframework.expression/src/main/java/org/springframework/expression/spel/generated/SpringExpressions.g 2008-08-14 17:21:13
package org.springframework.expression.spel.generated;

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.tree.*;

public class SpringExpressionsParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "EXPRESSIONLIST", "INTEGER_LITERAL", "EXPRESSION", "QUALIFIED_IDENTIFIER", "REFERENCE", "PROPERTY_OR_FIELD", "INDEXER", "ARGLIST", "CONSTRUCTOR", "DATE_LITERAL", "HOLDER", "CONSTRUCTOR_ARRAY", "NAMED_ARGUMENT", "FUNCTIONREF", "TYPEREF", "RANGE", "VARIABLEREF", "LIST_INITIALIZER", "MAP_INITIALIZER", "LOCALVAR", "LOCALFUNC", "MAP_ENTRY", "METHOD", "ADD", "SUBTRACT", "NUMBER", "LPAREN", "SEMI", "SEMIRPAREN", "RPAREN", "ASSIGN", "DEFAULT", "QMARK", "COLON", "OR", "AND", "PLUS", "MINUS", "STAR", "DIV", "MOD", "POWER", "BANG", "DOT", "POUND", "ID", "DOLLAR", "COMMA", "AT", "LBRACKET", "RBRACKET", "PROJECT", "RCURLY", "SELECT", "SELECT_FIRST", "SELECT_LAST", "TYPE", "LAMBDA", "PIPE", "LCURLY", "STRING_LITERAL", "DQ_STRING_LITERAL", "NULL_LITERAL", "HEXADECIMAL_INTEGER_LITERAL", "REAL_LITERAL", "TRUE", "FALSE", "DECIMAL_DIGIT", "INTEGER_TYPE_SUFFIX", "HEX_DIGIT", "EQUAL", "NOT_EQUAL", "LESS_THAN", "LESS_THAN_OR_EQUAL", "GREATER_THAN", "GREATER_THAN_OR_EQUAL", "IN", "IS", "BETWEEN", "LIKE", "MATCHES", "SOUNDSLIKE", "DISTANCETO", "APOS", "DOT_ESCAPED", "WS", "UPTO", "EXPONENT_PART", "REAL_TYPE_SUFFIX", "SIGN", "'new'", "'date'"
    };
    public static final int COMMA=51;
    public static final int GREATER_THAN_OR_EQUAL=79;
    public static final int EXPRESSIONLIST=4;
    public static final int GREATER_THAN=78;
    public static final int MINUS=41;
    public static final int NUMBER=29;
    public static final int ARGLIST=11;
    public static final int BANG=46;
    public static final int LESS_THAN=76;
    public static final int METHOD=26;
    public static final int FALSE=70;
    public static final int PROPERTY_OR_FIELD=9;
    public static final int INDEXER=10;
    public static final int CONSTRUCTOR_ARRAY=15;
    public static final int NULL_LITERAL=66;
    public static final int NAMED_ARGUMENT=16;
    public static final int PIPE=62;
    public static final int DOT=47;
    public static final int AND=39;
    public static final int EXPRESSION=6;
    public static final int LCURLY=63;
    public static final int DATE_LITERAL=13;
    public static final int REAL_TYPE_SUFFIX=92;
    public static final int QUALIFIED_IDENTIFIER=7;
    public static final int SELECT=57;
    public static final int STRING_LITERAL=64;
    public static final int SUBTRACT=28;
    public static final int RBRACKET=54;
    public static final int RPAREN=33;
    public static final int BETWEEN=82;
    public static final int SIGN=93;
    public static final int PLUS=40;
    public static final int INTEGER_LITERAL=5;
    public static final int AT=52;
    public static final int RANGE=19;
    public static final int SOUNDSLIKE=85;
    public static final int WS=89;
    public static final int DOLLAR=50;
    public static final int LESS_THAN_OR_EQUAL=77;
    public static final int HEXADECIMAL_INTEGER_LITERAL=67;
    public static final int LAMBDA=61;
    public static final int SEMI=31;
    public static final int EQUAL=74;
    public static final int DOT_ESCAPED=88;
    public static final int QMARK=36;
    public static final int COLON=37;
    public static final int PROJECT=55;
    public static final int DIV=43;
    public static final int REAL_LITERAL=68;
    public static final int ADD=27;
    public static final int TRUE=69;
    public static final int EXPONENT_PART=91;
    public static final int POUND=48;
    public static final int HOLDER=14;
    public static final int SELECT_FIRST=58;
    public static final int TYPE=60;
    public static final int MAP_ENTRY=25;
    public static final int SELECT_LAST=59;
    public static final int LBRACKET=53;
    public static final int MOD=44;
    public static final int FUNCTIONREF=17;
    public static final int OR=38;
    public static final int RCURLY=56;
    public static final int ASSIGN=34;
    public static final int LPAREN=30;
    public static final int HEX_DIGIT=73;
    public static final int LIST_INITIALIZER=21;
    public static final int APOS=87;
    public static final int ID=49;
    public static final int NOT_EQUAL=75;
    public static final int POWER=45;
    public static final int TYPEREF=18;
    public static final int DISTANCETO=86;
    public static final int DECIMAL_DIGIT=71;
    public static final int IS=81;
    public static final int SEMIRPAREN=32;
    public static final int DQ_STRING_LITERAL=65;
    public static final int LIKE=83;
    public static final int MAP_INITIALIZER=22;
    public static final int LOCALFUNC=24;
    public static final int IN=80;
    public static final int CONSTRUCTOR=12;
    public static final int INTEGER_TYPE_SUFFIX=72;
    public static final int MATCHES=84;
    public static final int EOF=-1;
    public static final int UPTO=90;
    public static final int REFERENCE=8;
    public static final int DEFAULT=35;
    public static final int LOCALVAR=23;
    public static final int STAR=42;
    public static final int VARIABLEREF=20;

        public SpringExpressionsParser(TokenStream input) {
            super(input);
            ruleMemo = new HashMap[55+1];
         }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return tokenNames; }
    public String getGrammarFileName() { return "/Users/aclement/el2/spring-framework/trunk/org.springframework.expression/src/main/java/org/springframework/expression/spel/generated/SpringExpressions.g"; }


      // For collecting info whilst processing rules that can be used in messages
      protected Stack<String> paraphrase = new Stack<String>();


    public static class expr_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start expr
    // /Users/aclement/el2/spring-framework/trunk/org.springframework.expression/src/main/java/org/springframework/expression/spel/generated/SpringExpressions.g:61:1: expr : expression EOF ;
    public final expr_return expr() throws RecognitionException {
        expr_return retval = new expr_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token EOF2=null;
        expression_return expression1 = null;


        Object EOF2_tree=null;

        try {
            // /Users/aclement/el2/spring-framework/trunk/org.springframework.expression/src/main/java/org/springframework/expression/spel/generated/SpringExpressions.g:61:5: ( expression EOF )
            // /Users/aclement/el2/spring-framework/trunk/org.springframework.expression/src/main/java/org/springframework/expression/spel/generated/SpringExpressions.g:61:7: expression EOF
            {
            root_0 = (Object)adaptor.nil();

            pushFollow(FOLLOW_expression_in_expr181);
            expression1=expression();
            _fsp--;
            if (failed) return retval;
            if ( backtracking==0 ) adaptor.addChild(root_0, expression1.getTree());
            EOF2=(Token)input.LT(1);
            match(input,EOF,FOLLOW_EOF_in_expr183); if (failed) return retval;

            }

            retval.stop = input.LT(-1);

            if ( backtracking==0 ) {
                retval.tree = (Object)adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }

                catch(RecognitionException e) {
                        reportError(e);
                        throw e;
                }
        finally {
        }
        return retval;
    }
    // $ANTLR end expr

    public static class exprList_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start exprList
    // /Users/aclement/el2/spring-framework/trunk/org.springframework.expression/src/main/java/org/springframework/expression/spel/generated/SpringExpressions.g:63:1: exprList : LPAREN expression ( SEMI expression )+ ( SEMIRPAREN | RPAREN ) -> ^( EXPRESSIONLIST ( expression )+ ) ;
    public final exprList_return exprList() throws RecognitionException {
        exprList_return retval = new exprList_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token LPAREN3=null;
        Token SEMI5=null;
        Token SEMIRPAREN7=null;
        Token RPAREN8=null;
        expression_return expression4 = null;

        expression_return expression6 = null;


        Object LPAREN3_tree=null;
        Object SEMI5_tree=null;
        Object SEMIRPAREN7_tree=null;
        Object RPAREN8_tree=null;
        RewriteRuleTokenStream stream_SEMI=new RewriteRuleTokenStream(adaptor,"token SEMI");
        RewriteRuleTokenStream stream_RPAREN=new RewriteRuleTokenStream(adaptor,"token RPAREN");
        RewriteRuleTokenStream stream_LPAREN=new RewriteRuleTokenStream(adaptor,"token LPAREN");
        RewriteRuleTokenStream stream_SEMIRPAREN=new RewriteRuleTokenStream(adaptor,"token SEMIRPAREN");
        RewriteRuleSubtreeStream stream_expression=new RewriteRuleSubtreeStream(adaptor,"rule expression");
        try {
            // /Users/aclement/el2/spring-framework/trunk/org.springframework.expression/src/main/java/org/springframework/expression/spel/generated/SpringExpressions.g:64:5: ( LPAREN expression ( SEMI expression )+ ( SEMIRPAREN | RPAREN ) -> ^( EXPRESSIONLIST ( expression )+ ) )
            // /Users/aclement/el2/spring-framework/trunk/org.springframework.expression/src/main/java/org/springframework/expression/spel/generated/SpringExpressions.g:64:7: LPAREN expression ( SEMI expression )+ ( SEMIRPAREN | RPAREN )
            {
            LPAREN3=(Token)input.LT(1);
            match(input,LPAREN,FOLLOW_LPAREN_in_exprList196); if (failed) return retval;
            if ( backtracking==0 ) stream_LPAREN.add(LPAREN3);

            pushFollow(FOLLOW_expression_in_exprList198);
            expression4=expression();
            _fsp--;
            if (failed) return retval;
            if ( backtracking==0 ) stream_expression.add(expression4.getTree());
            // /Users/aclement/el2/spring-framework/trunk/org.springframework.expression/src/main/java/org/springframework/expression/spel/generated/SpringExpressions.g:64:25: ( SEMI expression )+
            int cnt1=0;
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==SEMI) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // /Users/aclement/el2/spring-framework/trunk/org.springframework.expression/src/main/java/org/springframework/expression/spel/generated/SpringExpressions.g:64:26: SEMI expression
            	    {
            	    SEMI5=(Token)input.LT(1);
            	    match(input,SEMI,FOLLOW_SEMI_in_exprList201); if (failed) return retval;
            	    if ( backtracking==0 ) stream_SEMI.add(SEMI5);

            	    pushFollow(FOLLOW_expression_in_exprList203);
            	    expression6=expression();
            	    _fsp--;
            	    if (failed) return retval;
            	    if ( backtracking==0 ) stream_expression.add(expression6.getTree());

            	    }
            	    break;

            	default :
            	    if ( cnt1 >= 1 ) break loop1;
            	    if (backtracking>0) {failed=true; return retval;}
                        EarlyExitException eee =
                            new EarlyExitException(1, input);
                        throw eee;
                }
                cnt1++;
            } while (true);

            // /Users/aclement/el2/spring-framework/trunk/org.springframework.expression/src/main/java/org/springframework/expression/spel/generated/SpringExpressions.g:64:44: ( SEMIRPAREN | RPAREN )
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==SEMIRPAREN) ) {
                alt2=1;
            }
            else if ( (LA2_0==RPAREN) ) {
                alt2=2;
            }
            else {
                if (backtracking>0) {failed=true; return retval;}
                NoViableAltException nvae =
                    new NoViableAltException("64:44: ( SEMIRPAREN | RPAREN )", 2, 0, input);

                throw nvae;
            }
            switch (alt2) {
                case 1 :
                    // /Users/aclement/el2/spring-framework/trunk/org.springframework.expression/src/main/java/org/springframework/expression/spel/generated/SpringExpressions.g:64:45: SEMIRPAREN
                    {
                    SEMIRPAREN7=(Token)input.LT(1);
                    match(input,SEMIRPAREN,FOLLOW_SEMIRPAREN_in_exprList208); if (failed) return retval;
                    if ( backtracking==0 ) stream_SEMIRPAREN.add(SEMIRPAREN7);


                    }
                    break;
                case 2 :
                    // /Users/aclement/el2/spring-framework/trunk/org.springframework.expression/src/main/java/org/springframework/expression/spel/generated/SpringExpressions.g:64:58: RPAREN
                    {
                    RPAREN8=(Token)input.LT(1);
                    match(input,RPAREN,FOLLOW_RPAREN_in_exprList212); if (failed) return retval;
                    if ( backtracking==0 ) stream_RPAREN.add(RPAREN8);


                    }
                    break;

            }


            // AST REWRITE
            // elements: expression
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            if ( backtracking==0 ) {
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"token retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 65:7: -> ^( EXPRESSIONLIST ( expression )+ )
            {
                // /Users/aclement/el2/spring-framework/trunk/org.springframework.expression/src/main/java/org/springframework/expression/spel/generated/SpringExpressions.g:65:10: ^( EXPRESSIONLIST ( expression )+ )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot(adaptor.create(EXPRESSIONLIST, "EXPRESSIONLIST"), root_1);

                if ( !(stream_expression.hasNext()) ) {
                    throw new RewriteEarlyExitException();
                }
                while ( stream_expression.hasNext() ) {
                    adaptor.addChild(root_1, stream_expression.next());

                }
                stream_expression.reset();

                adaptor.addChild(root_0, root_1);
                }

            }

            }

            }

            retval.stop = input.LT(-1);

            if ( backtracking==0 ) {
                retval.tree = (Object)adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }

                catch(RecognitionException e) {
                        reportError(e);
                        throw e;
                }
        finally {
        }
        return retval;
    }
    // $ANTLR end exprList

    public static class expression_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start expression
    // /Users/aclement/el2/spring-framework/trunk/org.springframework.expression/src/main/java/org/springframework/expression/spel/generated/SpringExpressions.g:69:1: expression : logicalOrExpression ( ( ASSIGN logicalOrExpression ) | ( DEFAULT logicalOrExpression ) | ( QMARK expression COLON expression ) )? ;
    public final expression_return expression() throws RecognitionException {
        expression_return retval = new expression_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token ASSIGN10=null;
        Token DEFAULT12=null;
        Token QMARK14=null;
        Token COLON16=null;
        logicalOrExpression_return logicalOrExpression9 = null;

        logicalOrExpression_return logicalOrExpression11 = null;

        logicalOrExpression_return logicalOrExpression13 = null;

        expression_return expression15 = null;

        expression_return expression17 = null;


        Object ASSIGN10_tree=null;
        Object DEFAULT12_tree=null;
        Object QMARK14_tree=null;
        Object COLON16_tree=null;

        try {
            // /Users/aclement/el2/spring-framework/trunk/org.springframework.expression/src/main/java/org/springframework/expression/spel/generated/SpringExpressions.g:69:12: ( logicalOrExpression ( ( ASSIGN logicalOrExpression ) | ( DEFAULT logicalOrExpression ) | ( QMARK expression COLON expression ) )? )
            // /Users/aclement/el2/spring-framework/trunk/org.springframework.expression/src/main/java/org/springframework/expression/spel/generated/SpringExpressions.g:70:5: logicalOrExpression ( ( ASSIGN logicalOrExpression ) | ( DEFAULT logicalOrExpression ) | ( QMARK expression COLON expression ) )?
            {
            root_0 = (Object)adaptor.nil();

            pushFollow(FOLLOW_logicalOrExpression_in_expression256);
            logicalOrExpression9=logicalOrExpression();
            _fsp--;
            if (failed) return retval;
            if ( backtracking==0 ) adaptor.addChild(root_0, logicalOrExpression9.getTree());
            // /Users/aclement/el2/spring-framework/trunk/org.springframework.expression/src/main/java/org/springframework/expression/spel/generated/SpringExpressions.g:71:5: ( ( ASSIGN logicalOrExpression ) | ( DEFAULT logicalOrExpression ) | ( QMARK expression COLON expression ) )?
            int alt3=4;
            switch ( input.LA(1) ) {
                case ASSIGN:
                    {
                    alt3=1;
                    }
                    break;
                case DEFAULT:
                    {
                    alt3=2;
                    }
                    break;
                case QMARK:
                    {
                    alt3=3;
                    }
                    break;
            }

            switch (alt3) {
                case 1 :
                    // /Users/aclement/el2/spring-framework/trunk/org.springframework.expression/src/main/java/org/springframework/expression/spel/generated/SpringExpressions.g:71:7: ( ASSIGN logicalOrExpression )
                    {
                    // /Users/aclement/el2/spring-framework/trunk/org.springframework.expression/src/main/java/org/springframework/expression/spel/generated/SpringExpressions.g:71:7: ( ASSIGN logicalOrExpression )
                    // /Users/aclement/el2/spring-framework/trunk/org.springframework.expression/src/main/java/org/springframework/expression/spel/generated/SpringExpressions.g:71:8: ASSIGN logicalOrExpression
                    {
                    ASSIGN10=(Token)input.LT(1);
                    match(input,ASSIGN,FOLLOW_ASSIGN_in_expression265); if (failed) return retval;
                    if ( backtracking==0 ) {
                    ASSIGN10_tree = (Object)adaptor.create(ASSIGN10);
                    root_0 = (Object)adaptor.becomeRoot(ASSIGN10_tree, root_0);
                    }
                    pushFollow(FOLLOW_logicalOrExpression_in_expression268);
                    logicalOrExpression11=logicalOrExpression();
                    _fsp--;
                    if (failed) return retval;
                    if ( backtracking==0 ) adaptor.addChild(root_0, logicalOrExpression11.getTree());

                    }


                    }
                    break;
                case 2 :
                    // /Users/aclement/el2/spring-framework/trunk/org.springframework.expression/src/main/java/org/springframework/expression/spel/generated/SpringExpressions.g:72:6: ( DEFAULT logicalOrExpression )
                    {
                    // /Users/aclement/el2/spring-framework/trunk/org.springframework.expression/src/main/java/org/springframework/expression/spel/generated/SpringExpressions.g:72:6: ( DEFAULT logicalOrExpression )
                    // /Users/aclement/el2/spring-framework/trunk/org.springframework.expression/src/main/java/org/springframework/expression/spel/generated/SpringExpressions.g:72:7: DEFAULT logicalOrExpression
                    {
                    DEFAULT12=(Token)input.LT(1);
                    match(input,DEFAULT,FOLLOW_DEFAULT_in_expression278); if (failed) return retval;
                    if ( backtracking==0 ) {
                    DEFAULT12_tree = (Object)adaptor.create(DEFAULT12);
                    root_0 = (Object)adaptor.becomeRoot(DEFAULT12_tree, root_0);
                    }
                    pushFollow(FOLLOW_logicalOrExpression_in_expression281);
                    logicalOrExpression13=logicalOrExpression();
                    _fsp--;
                    if (failed) return retval;
                    if ( backtracking==0 ) adaptor.addChild(root_0, logicalOrExpression13.getTree());

                    }

